--- a/src/components/global/Header/Header.pug
+++ b/src/components/global/Header/Header.pug
@@ -54,11 +54,11 @@ header(class="bg-white")
                             a(href="" class="hover-text-bottom") Tuyển dụng
                         li
                             a(href="" class="hover-text-bottom") Liên hệ
-        .header-mobile(class="xl:hidden mt-5 relative flex gap-2")
+        .header-mobile(class="xl:hidden mt-10 relative flex gap-2 z-0")
             ul
-                li(class="w-20 h-20 border-solid p-3  flex items-center justify-center cursor-pointer bg-gray-100 rounded-2 header-search ") <i class="fa-regular fa-magnifying-glass text-[#41924f] rem:text-[40px] header-search"></i>
-            .header-mobile-hamberger(class="w-20 h-20 border-solid p-3  flex items-center justify-center cursor-pointer bg-[#41924F] rounded-2 js-toggle-menu relative right-0")
-                <i class="fa-solid fa-bars text-[#fff] rem:text-40 "></i>
+                li(class="w-15 h-15 border-solid p-3  flex items-center justify-center cursor-pointer bg-gray-100 rounded-2 header-search ") <i class="fa-regular fa-magnifying-glass text-[#41924f] rem:text-[25px] header-search"></i>
+            .header-mobile-hamberger(class="w-15 h-15 border-solid p-3  flex items-center justify-center cursor-pointer bg-[#41924F] rounded-2 js-toggle-menu relative right-0")
+                <i class="fa-solid fa-bars text-[#fff] rem:text-[25px] "></i>
             .mobile-overlay
             .mobile-menu-list
                 ul(class="font-bold")
