--- a/src/components/global/Header/Header.sass
+++ b/src/components/global/Header/Header.sass
@@ -1,6 +1,6 @@
 header
-  @apply sticky top-0 left-0 w-screen
-  @apply text-black z-10
+  @apply fixed top-0 left-0 w-screen
+  @apply text-black z-50
   font-family: 'Exo 2', sans-serif
   .header-language
     @apply flex items-center gap-2 text-[#41924F]
