--- a/src/components/global/PageBanner/PageBanner.pug
+++ b/src/components/global/PageBanner/PageBanner.pug
@@ -1,3 +1,4 @@
 section.page-banner-main
 	.img(class="img-ratio pt-[calc(550/1920*100rem)]")
-		img(src="./img/19.png", alt="")
+		img(src="./img/1.jpg", alt="")
+		
