--- a/src/pages/home.pug
+++ b/src/pages/home.pug
@@ -1,8 +1,9 @@
 extends ./_layout/_default.pug
-
+	
 block var
-	- var title = 'Home'
-	- var bodyClass = 'homepage'
+	- var title = ''
+	- var bodyClass = ''
+	
 block main
 	include ../components/modules/home/home-1/home-1
 	include ../components/modules/home/home-3/home-3
