--- a/src/components/modules/home/home-3/home-3.pug
+++ b/src/components/modules/home/home-3/home-3.pug
@@ -1,2 +1,45 @@
 section.home-3(setBackground="./img/section3.png")
-    
+    .container(class="py-10")
+        div(class="block")
+            .tile 
+                h1(class="text-center uppercase rem:text-[48px text-[#41924F] sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl") Lĩnh vực hoạt động
+            .text 
+                p(class="text-center font-normal rem:text-[20px]") Xí nghiệp cung cấp đa đạng các dịch vụ logistic và cảng biển, từ lưu trữ vận tải đến xếp dỡ và bảo dưỡng thiết bị
+        
+        // Container cho các card
+        .card-container(class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 mt-8")
+            // Bắt đầu một card
+            .card-item
+                .card-item__image
+                    img(src="./img/1.jpg", alt="Image")
+                .card-item__content
+                    h3.card-item__title Dịch vụ Bốc xếp
+                    p.card-item__info Xí nghiệp cung cấp đa đạng các dịch vụ logistic và cảng biển, từ lưu trữ vận tải đến xếp dỡ và bảo dưỡng thiết bị
+            // Kết thúc một card
+
+            // Bắt đầu một card
+            .card-item
+                .card-item__image
+                    img(src="./img/1.jpg", alt="Image")
+                .card-item__content
+                    h3.card-item__title Dịch vụ Bốc xếp
+                    p.card-item__info Xí nghiệp cung cấp đa đạng các dịch vụ logistic và cảng biển, từ lưu trữ vận tải đến xếp dỡ và bảo dưỡng thiết bị
+            // Kết thúc một card
+
+            // Bắt đầu một card
+            .card-item
+                .card-item__image
+                    img(src="./img/1.jpg", alt="Image")
+                .card-item__content
+                    h3.card-item__title Dịch vụ Bốc xếp
+                    p.card-item__info Xí nghiệp cung cấp đa đạng các dịch vụ logistic và cảng biển, từ lưu trữ vận tải đến xếp dỡ và bảo dưỡng thiết bị
+            // Kết thúc một card
+            
+            // Bắt đầu một card
+            .card-item
+                .card-item__image
+                    img(src="./img/1.jpg", alt="Image")
+                .card-item__content
+                    h3.card-item__title Dịch vụ Bốc xếp
+                    p.card-item__info Xí nghiệp cung cấp đa đạng các dịch vụ logistic và cảng biển, từ lưu trữ vận tải đến xếp dỡ và bảo dưỡng thiết bị
+            // Kết thúc một card
