--- a/src/components/modules/home/home-2/home-2.pug
+++ b/src/components/modules/home/home-2/home-2.pug
@@ -3,7 +3,7 @@ section.home-2(setBackground="./img/section2.png")
         .introduce-top(class="rem:w-[800px] h-auto flex-col rem:gap-[40px] py-12 border-b border-gray-50")
             .introduce-top_tile(class=" sm:text-4xl md:text-5xl rem:text-[48px] uppercase font-bold text-white")
                 h1(class="rem:text-[48px] uppercase font-bold text-white") Giới thiệu
-            .introduce-top_body(class="text-xl font-normal text-white py-8")
+            .introduce-top_body
                 p Sản phẩm truyền thông của PVC - MS là thi công các kết cấu giàn khoan, bồn bể, đường ống công nghệ, các tuyến ống dẫn, chế tạo thiết bị cơ khí dầu khí, lắp đặt thiết bị siêu trường siêu trọng 
             .introduce-top_button(class="ml-2")
                 button(class="w-36 h-12 bg-blue-800  border-solid border-gray-300 border-2  text-white text-sm transition-all") Xem thêm <i class="fa-solid fa-angle-right transition-transform"></i>
@@ -12,38 +12,37 @@ section.home-2(setBackground="./img/section2.png")
                 ul
                     li 
                         h1 40+
-                    li 
+                    li(class="hidden md:block") 
                         h4 tỷ VNĐ
-                    li 
+                    li(class="hidden md:block")
                         p Lorem, ipsum dolor.
                 ul
                     li 
                         h1 69
-                    li 
+                    li(class="hidden md:block")
                         h4 Chân đế dàn khoan
-                    li 
+                    li(class="hidden md:block")
                         p Lorem, ipsum dolor.
                 ul
                     li 
                         h1 50%
-                    li 
+                    li(class="hidden md:block") 
                         h4 tỷ VNĐ
-                    li 
+                    li(class="hidden md:block")
                         p Lorem, ipsum dolor.
             .introduce-bottom_top(class="flex py-18")
                 ul
                     li 
                         h1 10.000
-                    li 
+                    li(class="hidden md:block") 
                         p Lorem, ipsum dolor.
                 ul
                     li 
                         h1 125
-                    li 
+                    li(class="hidden md:block")
                         p Lorem, ipsum dolor.
                 ul
-                    li 
+                    li
                         h1 23ha
-                    li 
+                    li(class="hidden md:block")
                         p Lorem, ipsum dolor.
-        
