--- a/src/components/modules/home/home-2/home-2.pug
+++ b/src/components/modules/home/home-2/home-2.pug
@@ -1,48 +1,31 @@
 section.home-2(setBackground="./img/section2.png")
-    .container
-        .introduce-top(class="rem:w-[800px] h-auto flex-col rem:gap-[40px] py-12 border-b border-gray-50")
-            .introduce-top_tile(class=" sm:text-4xl md:text-5xl rem:text-[48px] uppercase font-bold text-white")
-                h1(class="rem:text-[48px] uppercase font-bold text-white") Giới thiệu
-            .introduce-top_body
-                p Sản phẩm truyền thông của PVC - MS là thi công các kết cấu giàn khoan, bồn bể, đường ống công nghệ, các tuyến ống dẫn, chế tạo thiết bị cơ khí dầu khí, lắp đặt thiết bị siêu trường siêu trọng 
-            .introduce-top_button(class="ml-2")
-                button(class="w-36 h-12 bg-blue-800  border-solid border-gray-300 border-2  text-white text-sm transition-all") Xem thêm <i class="fa-solid fa-angle-right transition-transform"></i>
-        .introduce-bottom
-            .introduce-bottom_top(class="flex py-18  ")
-                ul
-                    li 
-                        h1 40+
-                    li(class="hidden md:block") 
-                        h4 tỷ VNĐ
-                    li(class="hidden md:block")
-                        p Lorem, ipsum dolor.
-                ul
-                    li 
-                        h1 69
-                    li(class="hidden md:block")
-                        h4 Chân đế dàn khoan
-                    li(class="hidden md:block")
-                        p Lorem, ipsum dolor.
-                ul
-                    li 
-                        h1 50%
-                    li(class="hidden md:block") 
-                        h4 tỷ VNĐ
-                    li(class="hidden md:block")
-                        p Lorem, ipsum dolor.
-            .introduce-bottom_top(class="flex py-18")
-                ul
-                    li 
-                        h1 10.000
-                    li(class="hidden md:block") 
-                        p Lorem, ipsum dolor.
-                ul
-                    li 
-                        h1 125
-                    li(class="hidden md:block")
-                        p Lorem, ipsum dolor.
-                ul
-                    li
-                        h1 23ha
-                    li(class="hidden md:block")
-                        p Lorem, ipsum dolor.
+    .container(class="h-full")
+        div(class='w-7/12  h-full flex flex-col justify-end pb-20  ')
+                .introduce-top(class=" rem:h-[370px]  border-b border-gray-400 ")
+                    .introduce-tile(class="flex-col rem:gap-[90px]  ")
+                        h1(class="text-white uppercase rem:text-[48px] font-bold  ") Giới thiệu 
+                        p(class="hidden xs:block text-white rem:text-[20px] font-normal xs:text-base md:text-lg lg:text-xl break-words mt-8 ") Sản phẩm truyền thống của PVC-MS là thi công các kết cấu giàn khoan, bồn bể, đường ống công nghệ, các tuyến ống dẫn, chế tạo thiết bị cơ khí dầu khí, lắp đặt thiết bị siêu trường, siêu trọng. 
+                        button(class="rem:w-[146px] rem:h-[48px] bg-blue-600 border-4 border-solid border-gray-500 text-white my-8") Xem thêm <i class="fa-solid fa-angle-right"></i>
+                .introduce-bottom 
+                    .bottom-grid(class=" grid grid-cols-3 gap-x-15 gap-y-25 text-white py-10    -xs:grid-cols-2 -xs:gap-3 -xs:mt-5  -sm:grid-cols-2 -sm:gap-5  xl:grid-cols-3 text-center ")
+                        div 
+                            h1 40+
+                            h4 tỷ VNĐ
+                            p Hình thành và phát triển 
+                        div.boder-center
+                            h1 69
+                            h4 Chân đế giàn khoan 
+                            p Giàn khoan đã thi công
+                        div
+                            h1 50%
+                            h4 tỷ VNĐ
+                            p Do PVC-MS thực hiện
+                        div
+                            h1 10.000
+                            p Tần khối kết cấu có thể hạ thủy
+                        div.boder-center
+                            h1 125+
+                            p Dự án hoàn thành
+                        div
+                            h1 23ha
+                            p Quy mô cản thi công
