--- a/src/components/global/Header/Header.pug
+++ b/src/components/global/Header/Header.pug
@@ -2,7 +2,7 @@ header(class="bg-white")
     nav(class="flex justify-between mx-4 xl:mx-[160px]")
         .header-logo
             a(href="")
-                img(src="./img/logo.png", alt="")(class="w-auto h-30")
+                img(src="./img/logo.png", alt="", class="w-auto h-30")
         .header-menu(class="hidden xl:block") 
             .menu-top(class="text-base mt-2 mb-3 flex justify-end border-b boder-[#000000]  ")
                 ul(class="flex gap-8 items-center")
