--- a/src/components/modules/home/home-1/home-1.pug
+++ b/src/components/modules/home/home-1/home-1.pug
@@ -35,3 +35,16 @@ section.home-1-slider
         .pagination-item
             .text Sáng tạo
             .underline
+    .slier-fix(class="fixed rem:top-[30%] right-3 z-1000")
+        ul
+            li
+                a(href="") 
+            li
+                a(href="") 
+            li
+                a(href="") 
+            li
+                a(href="")
+            li
+                a(href="")
+        
