--- a/src/components/modules/home/home-5/home-5.pug
+++ b/src/components/modules/home/home-5/home-5.pug
@@ -1,7 +1,7 @@
 section.home-5(setBackground="./img/section5.png")
-    .container(class="flex flex-col justify-end h-full")
-        div(class="w-full flex justify-between ")
-            h1(class="text-[#41924F] uppercase rem:text-[48px] font-bold  ") Tin tức mới nhất
+    .container(class="flex flex-col justify-center h-full")
+        div(class="w-full flex justify-between items-center")
+            h1(class="text-[#41924F] uppercase xl:rem:text-[48px] md:text-[32px] -sm:text-[24px] font-bold  ") Tin tức mới nhất
             button(class="rem:w-[146px] rem:h-[48px] bg-blue-600 border-4 border-solid border-gray-500 text-white ") Xem thêm <i class="fa-solid fa-angle-right"></i>
         div(class="col-big")
             .col
@@ -36,4 +36,3 @@ section.home-5(setBackground="./img/section5.png")
                             p Tin công ty
                         h1 PVC-MS stands in Top 1,000 Enterprises pay corporate 
                         p PVC-MS stands in Top 1,000 Enterprises pay corporate income tax in Vietnam for 5 consecutive years
-                
