--- a/src/components/modules/home/home-1/home-1.pug
+++ b/src/components/modules/home/home-1/home-1.pug
@@ -1,4 +1,4 @@
-section.home-1-slider
+section.home-1-slider(id="home-1")
     // Main Swiper container
     .swiper-container
         // Additional required wrapper
@@ -17,9 +17,6 @@ section.home-1-slider
                 img(src="https://cdn-media.sforum.vn/storage/app/media/anh-dep-80.jpg", alt="Banner 4")
                 .slide-text
         
-        // Optional: Add navigation buttons
-        .swiper-button-prev(class="text-gray-400")
-        .swiper-button-next(class="text-gray-400")
 
     // Custom Pagination
     .home-1-pagination
