--- a/src/components/modules/home/home-2/home-2.pug
+++ b/src/components/modules/home/home-2/home-2.pug
@@ -1,9 +1,9 @@
-section.home-2(setBackground="./img/section2.png")
+section.home-2(setBackground="./img/section2.png")(id="home-2")
     .container(class="h-full")
         div(class='w-7/12  h-full flex flex-col justify-end pb-20  ')
                 .introduce-top(class=" rem:h-[370px]  border-b border-gray-400 ")
                     .introduce-tile(class="flex-col rem:gap-[90px]  ")
-                        h1(class="text-white uppercase rem:text-[48px] font-bold  ") Giới thiệu 
+                        h1(class="text-white uppercase rem:text-[48px] font-bold md:rem:text-[30px] ") Giới thiệu 
                         p(class="hidden xs:block text-white rem:text-[20px] font-normal xs:text-base md:text-lg lg:text-xl break-words mt-8 ") Sản phẩm truyền thống của PVC-MS là thi công các kết cấu giàn khoan, bồn bể, đường ống công nghệ, các tuyến ống dẫn, chế tạo thiết bị cơ khí dầu khí, lắp đặt thiết bị siêu trường, siêu trọng. 
                         button(class="rem:w-[146px] rem:h-[48px] bg-blue-600 border-4 border-solid border-gray-500 text-white my-8") Xem thêm <i class="fa-solid fa-angle-right"></i>
                 .introduce-bottom 
