--- a/src/components/modules/home/home-3/home-3.pug
+++ b/src/components/modules/home/home-3/home-3.pug
@@ -1,4 +1,4 @@
-section.home-3(setBackground="./img/section3.png")
+section.home-3(setBackground="./img/section3.png")(id="home-3")
     .container(class="py-10")
         div(class="block")
             .tile 
