--- a/src/components/modules/home/home-4/home-4.pug
+++ b/src/components/modules/home/home-4/home-4.pug
@@ -1,4 +1,4 @@
-section.home-4 
+section.home-4(id="home-4")
     .list 
         .item 
             img(src="./img/1.jpg", alt="")
@@ -16,8 +16,8 @@ section.home-4
             img(src="./img/1.jpg", alt="")
             .content 
                 h2 Dự án Chân đế JAKA Gallaf 3
-    .container(class="absolute top-42 left-20 z-10 flex flex-col gap-6")
-        .container-title(class="text-white uppercase font-extrabold rem:text-[48px] md:rem:text[30px] ")
+    .container(class="absolute top-42 left-20 z-10 flex flex-col gap-6 ")
+        .container-title(class="text-white uppercase font-extrabold rem:text-[48px] md:rem:text[30px] hidden md:block ")
             h1 Dự án
             h1 Công trình tiêu biểu 
-        button(class="rem:w-[146px] rem:h-[48px] bg-blue-600 border-4 border-solid border-gray-500 text-white ") Xem thêm <i class="fa-solid fa-angle-right"></i>
+        button(class="rem:w-[146px] rem:h-[48px] bg-blue-600 border-4 border-solid border-gray-500 text-white hidden md:block") Xem thêm <i class="fa-solid fa-angle-right"></i>
