--- a/src/components/modules/home/home-5/home-5.pug
+++ b/src/components/modules/home/home-5/home-5.pug
@@ -1,4 +1,4 @@
-section.home-5(setBackground="./img/section5.png")
+section.home-5(setBackground="./img/section5.png")(id="home-5")
     .container(class="flex flex-col justify-center h-full")
         div(class="w-full flex justify-between items-center")
             h1(class="text-[#41924F] uppercase xl:rem:text-[48px] md:text-[32px] -sm:text-[24px] font-bold  ") Tin tức mới nhất
