--- a/src/pages/_layout/_default.pug
+++ b/src/pages/_layout/_default.pug
@@ -23,6 +23,7 @@ html(lang="en")
 		block banner
 		main
 			block main
+			block fix
 		block footer
 			include ../../components/global/footer/footer.pug
 		script(src="./js/core.min.js")
