--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -9,3 +9,18 @@ block main
 	include ../components/modules/home/home-3/home-3
 	include ../components/modules/home/home-4/home-4
 	include ../components/modules/home/home-5/home-5
+block fix
+	.fix(class="fixed rem:top-[30%] right-4 z-1000")
+		ul
+			li
+				a(href="#home-1" class="dot" data-title="Home 1") 
+			li
+				a(href="#home-2" class="dot" data-title="Home 2")
+			li
+				a(href="#home-3" class="dot" data-title="Home 3")
+			li
+				a(href="#home-4" class="dot" data-title="Home 4")
+			li
+				a(href="#home-5" class="dot" data-title="Home 5")
+
+ 
