--- a/src/components/_core/_index.sass
+++ b/src/components/_core/_index.sass
@@ -1,5 +1,6 @@
 @import 'src/components/_core/_mixins'
 @import 'plugins/Wordpress/form'
+@import '../global/_fix.sass'
 
 .edit-link i:before
 	content: '✏️'
