--- a/src/components/global/Header/Header.pug
+++ b/src/components/global/Header/Header.pug
@@ -4,7 +4,7 @@ header(class="bg-white")
             a(href="")
                 img(src="./img/logo.png", alt="", class="w-auto h-30")
         .header-menu(class="hidden xl:block") 
-            .menu-top(class="text-base mt-2 mb-3 flex justify-end border-b boder-[#000000]  ")
+            .menu-top(class="text-base flex justify-end border-b boder-[#000000]  ")
                 ul(class="flex gap-8 items-center")
                     li(class="hidden xl:block")
                         a(href=""  class="hover-text-top  ") Tuyển dụng
@@ -25,8 +25,8 @@ header(class="bg-white")
                                 a(href="" class="border-solid w-9 h-9  p-3 flex items-center justify-center bg-[#1067E5] ") <i class="fa-brands fa-facebook-f text-[#fff] "></i>
                             li(class="hidden xl:block")
                                 a(href="" class="border-solid w-9 h-9 bg-[#FB0200]  p-3 flex items-center justify-center ") <i class="fa-brands fa-youtube  text-[#fff]"></i>
-            .menu-bottom(class="hidden xl:block") 
-                ul(class="flex gap-9 font-bold pt-3 rem:text-[18px]")
+            .menu-bottom(class="hidden xl:block  rem:h-[84px]") 
+                ul(class="flex gap-7  font-bold items-center h-full rem:text-[20px]")
                         li
                             a(href="" class="pb-7 border-b-2 border-[#41924F]") <i class="fa-regular fa-house  text-[#41924F]"></i>
                         li
@@ -39,17 +39,8 @@ header(class="bg-white")
                             a(href="" class="hover-text-bottom") Quan hệ cổ đông
                         li
                             a(href="" class="hover-text-bottom") ESG
-                        li(class="relative group ")
-                            a(href="" class="hover-text-bottom pb-[30px] inline-block ") Tin tức - Thư viện
-                            ul(class=" absolute hidden group-hover:block  left-0 bg-[#41924F] shadow-lg w-40 z-10 p-2 border border-gray-200 rounded-2")
-                                li
-                                    a(href="" class="block p-1  text-base font-light text-white hover:text-blue-400 ") Tin hoạt động
-                                li
-                                    a(href="" class="block p-1 text-base font-light text-white hover:text-blue-400") Thông cáo báo chí
-                                li
-                                    a(href="" class="block p-1 text-base font-light text-white hover:text-blue-400") Thư viện ảnh
-                                li
-                                    a(href="" class="block p-1 text-base font-light text-white hover:text-blue-400") Thư viện tài liệu
+                        li
+                            a(href="" class="hover-text-bottom ") Tin tức - Thư viện
                         li
                             a(href="" class="hover-text-bottom") Tuyển dụng
                         li
