--- a/src/components/modules/home/home-1/home-1.pug
+++ b/src/components/modules/home/home-1/home-1.pug
@@ -5,7 +5,7 @@ section.home-1-slider(id="home-1")
         .swiper-wrapper
             // Slides
             .swiper-slide
-                img(src="./img/banner1.png", alt="Banner 1")
+                img(src="./img/banner1.png", alt="Banner 2")
                 .slide-text
             .swiper-slide
                 img(src="https://cdn-media.sforum.vn/storage/app/media/anh-dep-68.jpg", alt="Banner 2")
@@ -17,31 +17,30 @@ section.home-1-slider(id="home-1")
                 img(src="https://cdn-media.sforum.vn/storage/app/media/anh-dep-80.jpg", alt="Banner 4")
                 .slide-text
         
-
-    // Custom Pagination
-    .home-1-pagination
-        .pagination-item
-            .text Tiêu điểm
-            .underline
-        .pagination-item
-            .text Đời sống
-            .underline
-        .pagination-item
-            .text Công nghệ
-            .underline
-        .pagination-item
-            .text Sáng tạo
-            .underline
-    .slier-fix(class="fixed rem:top-[30%] right-3 z-1000")
-        ul
-            li
-                a(href="") 
-            li
-                a(href="") 
-            li
-                a(href="") 
-            li
-                a(href="")
-            li
-                a(href="")
+    .container
+        .home-1-pagination
+            .pagination-item
+                .text Đối tác tin cậy của nhiều dự án tầm cỡ 
+                .underline
+            .pagination-item
+                .text Cung cấp dịch vụ toàn diện và hiệu quả
+                .underline
+            .pagination-item
+                .text Về chúng tôi
+                .underline
+            .pagination-item
+                .text Phát triển bền vững
+                .underline
+        .slier-fix(class="fixed rem:top-[30%] right-3 z-1000")
+            ul
+                li
+                    a(href="") 
+                li
+                    a(href="") 
+                li
+                    a(href="") 
+                li
+                    a(href="")
+                li
+                    a(href="")
         
