--- a/src/components/modules/home/home-5/home-5.pug
+++ b/src/components/modules/home/home-5/home-5.pug
@@ -3,17 +3,21 @@ section.home-5(setBackground="./img/section5.png")(id="home-5")
         div(class="w-full flex justify-between items-center")
             h1(class="text-[#41924F] uppercase xl:rem:text-[48px] md:text-[32px] -sm:text-[24px] font-bold  ") Tin tức mới nhất
             button(class="rem:w-[146px] rem:h-[48px] bg-blue-600 border-4 border-solid border-gray-500 text-white ") Xem thêm <i class="fa-solid fa-angle-right"></i>
-        div(class="col-big")
-            .col
-                img(src="./img/1.jpg", alt="")
+        div(class="col-gird")
+            .col-item-left
+                .img-container
+                    .img-zoom-wrapper
+                        img(src="./img/1.jpg", alt="")
                 .date
                     p 10/10/2025
                     p Tin công ty
                 h1 PVC-MS stands in Top 1,000 Enterprises pay corporate income tax in Vietnam for 5 consecutive years
                 p Sản phẩm truyền thống của PVC-MS là thi công các kết cấu giàn khoan, bồn bể, đường ống công nghệ
-            .col_2
+            .col-item-right
                 div
-                    img(src="./img/1.jpg", alt="")
+                    .img-container
+                        .img-zoom-wrapper
+                            img(src="./img/1.jpg", alt="")
                     .col-body 
                         .date
                             p 10/10/2025
@@ -21,7 +25,9 @@ section.home-5(setBackground="./img/section5.png")(id="home-5")
                         h1 PVC-MS stands in Top 1,000 Enterprises pay corporate 
                         p PVC-MS stands in Top 1,000 Enterprises pay corporate income tax in Vietnam for 5 consecutive years
                 div
-                    img(src="./img/1.jpg", alt="")
+                    .img-container
+                        .img-zoom-wrapper
+                            img(src="./img/1.jpg", alt="")
                     .col-body 
                         .date
                             p 10/10/2025
@@ -29,7 +35,9 @@ section.home-5(setBackground="./img/section5.png")(id="home-5")
                         h1 PVC-MS stands in Top 1,000 Enterprises pay corporate 
                         p PVC-MS stands in Top 1,000 Enterprises pay corporate income tax in Vietnam for 5 consecutive years
                 div
-                    img(src="./img/1.jpg", alt="")
+                    .img-container
+                        .img-zoom-wrapper
+                            img(src="./img/1.jpg", alt="")
                     .col-body 
                         .date
                             p 10/10/2025
