--- a/src/components/mixin.pug
+++ b/src/components/mixin.pug
@@ -56,3 +56,16 @@ mixin HeaderLanguage()
 					li 
 						a(href="") 
 							span EN
+mixin BtnPrimary(text="")
+	a(href='/' class='btn-gradient')
+		| XEM THÊM
+		img(src="/img/chevo-right.svg" alt="")
+mixin ItemColsSectionHome2(items)
+	div(class='grid grid-cols-3 divide-x divide-solid divide-white/60')
+		each item,i in items
+			- var colClass = i === 0 ? 'md:pr-6 pr-3' : 'md:pl-6 pl-3'
+			div(class=`${colClass} col-span-1 md:col-span-1 py-4 flex flex-col items-start text-white`)
+				h1.title-h1= item.number
+				if item.unit
+					h2.title-h2= item.unit
+				p.title-p= item.desc	
