--- a/src/components/modules/home/home-2/home-2.pug
+++ b/src/components/modules/home/home-2/home-2.pug
@@ -1,31 +1,15 @@
-section.home-2(setBackground="./img/section2.png")(id="home-2")
-    .container(class="h-full")
-        div(class='w-7/12  h-full flex flex-col justify-end pb-20  ')
-                .introduce-top(class=" rem:h-[370px]  border-b border-gray-400 ")
-                    .introduce-tile(class="flex-col rem:gap-[90px]  ")
-                        h1(class="text-white uppercase rem:text-[48px] font-bold md:rem:text-[30px] ") Giới thiệu 
-                        p(class="hidden xs:block text-white rem:text-[20px] font-normal xs:text-base md:text-lg lg:text-xl break-words mt-8 ") Sản phẩm truyền thống của PVC-MS là thi công các kết cấu giàn khoan, bồn bể, đường ống công nghệ, các tuyến ống dẫn, chế tạo thiết bị cơ khí dầu khí, lắp đặt thiết bị siêu trường, siêu trọng. 
-                        button(class="rem:w-[146px] rem:h-[48px] bg-blue-600 border-4 border-solid border-gray-500 text-white my-8") Xem thêm <i class="fa-solid fa-angle-right"></i>
-                .introduce-bottom 
-                    .bottom-grid(class=" grid grid-cols-3 gap-x-15 gap-y-25 text-white py-10    -xs:grid-cols-2 -xs:gap-3 -xs:mt-5  -sm:grid-cols-2 -sm:gap-5  xl:grid-cols-3 text-center ")
-                        div 
-                            h1 40+
-                            h4 tỷ VNĐ
-                            p Hình thành và phát triển 
-                        div.boder-center
-                            h1 69
-                            h4 Chân đế giàn khoan 
-                            p Giàn khoan đã thi công
-                        div
-                            h1 50%
-                            h4 tỷ VNĐ
-                            p Do PVC-MS thực hiện
-                        div
-                            h1 10.000
-                            p Tần khối kết cấu có thể hạ thủy
-                        div.boder-center
-                            h1 125+
-                            p Dự án hoàn thành
-                        div
-                            h1 23ha
-                            p Quy mô cản thi công
+section.swiper-slide.bg-dark.overflow-hidden(id="home-2")
+  .section-home-2.h-full
+    div(class='relative h-full')
+      div(class='container h-full mx-auto')
+        div(class='lg:w-7/12 flex h-full flex-col lg:justify-end justify-evenly xl:gap-20 md:gap-10 gap-5 pb-5')
+          div(class='flex flex-col gap-5 py-10 border-b-2 border-white/50 items-start pt-20')
+            h1(class='title-h1 capitalize') GIỚI THIỆU
+            p(class='title-h2 md:line-clamp-4 line-clamp-2')
+              | Sản phẩm truyền thống của PVC-MS là thi công các kết cấu giàn khoan...
+              | Sản phẩm truyền thống của PVC-MS là thi công các kết cấu giàn khoan...
+              | Sản phẩm truyền thống của PVC-MS là thi công các kết cấu giàn khoan...
+            +BtnPrimary()
+          div(class='flex flex-col md:gap-10 gap-5 lg:pb-16 pb-5')
+            +ItemColsSectionHome2([{number: '40+', unit: 'tỷ VNĐ', desc: 'Hình thành và phát triển'},{number: '100+', unit: 'dự án', desc: 'Đã thực hiện'},{number: '50%', unit: 'nhân sự', desc: 'Đội ngũ chuyên nghiệp'}])
+            +ItemColsSectionHome2([{number:'10.000', desc:'Tấn Khối kết cấu có thể hạ thủy'},{number:'125+',desc:'Dự án hoàn thành'},{number:'23ha',desc:'Quy mô bãi cảng thi công'}])
