--- a/src/components/modules/home/home-2/home-2.sass
+++ b/src/components/modules/home/home-2/home-2.sass
@@ -1,17 +1,9 @@
-.home-2
-    @apply w-auto min-h-[500px] md:min-h-[700px] rem:h-[960px]
-.bottom-grid
-
-    h1 
-        @apply  font-extrabold  md:rem:text-[50px] xs:text-xl
-    h2 
-        @apply rem:text-[20px] font-bold md:rem:text-[15px] xs:text-[12px]
-    p
-        @apply rem:text-[16px] font-normal md:text-xs
-@layer components 
-    .boder-center 
-        @apply text-center
-    @screen xl 
-        .boder-center 
-            @apply border-x-2
-        
+.section-home-2
+    @apply bg-[url("/img/section2.png")] bg-no-repeat bg-cover bg-center text-white relative
+.title-h1
+    @apply text-xl md:rem:text-[48px] rem:leading-[64px] font-extrabold
+    font-family: 'Exo 2', sans-serif
+.title-h2
+    @apply rem:text-[20px] leading-7 font-normal
+.title-p
+    @apply text-base leading-5 opacity-60
