--- a/src/components/modules/home/home-3/home-3.sass
+++ b/src/components/modules/home/home-3/home-3.sass
@@ -1,24 +1,17 @@
 .home-3
-    @apply w-full py-16
+    @apply w-full py-16 relative 
 
-// Ghi chú: Kiểu cho container của slider
+
 .home-3-slider
-    @apply relative px-12 
-    // Padding cho các nút điều hướng
-
     .swiper-slide
-        // Cần thiết để hiệu ứng hover không bị cắt xén bởi slide khác
         @apply overflow-visible
 
-    // Ghi chú: Kiểu cho mỗi card item BÊN TRONG slide
     .card-item
         @apply relative bg-green-700 rounded-lg shadow-xl overflow-hidden mx-auto
-        // Ghi chú: Kích thước mặc định của card (như đã thiết lập trước đó)
-        width: 350px
-        height: 500px
+        width: 382px
+        height: 602px
         max-width: 100%
 
-        // Container cho ảnh
         &__image
             @apply w-full h-full bg-green-700
             @apply flex justify-center items-center
@@ -27,12 +20,10 @@
                 @apply w-full h-full object-cover
                 transition: width 0.5s ease 0.1s, border-radius 0.5s ease 0.1s
 
-        // Container cho nội dung
         &__content
             @apply w-full bg-green-700 p-6 text-center
             height: 40%
 
-        // Ghi chú: Hiệu ứng hover trên card
         &:hover
             .card-item__image
                 margin-top: 20px
@@ -41,23 +32,47 @@
                     width: 92%
                     @apply rounded-lg
 
-        // Kiểu cho tiêu đề và thông tin
         &__title
             @apply text-2xl font-bold text-white
         &__info
             @apply text-gray-300 mt-2 text-lg
 
-    // Ghi chú: Kiểu cho các nút điều hướng
-    .swiper-button-next, .swiper-button-prev
-        color: #41924F
-        top: 50%
-        transform: translateY(-50%)
+.home-3-global-prev, .home-3-global-next
+    @apply absolute top-1/2 -translate-y-1/2 z-20
+    width: 48px
+    height: 48px
+    background-color: #2B378D
+    border-radius: 3px
+    display: flex
+    align-items: center
+    justify-content: center
+    cursor: pointer
+    transition: background-color 0.3s ease
 
-    .swiper-button-prev
-        left: 0
+    &:hover
+        background-color: white
+        color:#2B378D
+        border:1px solid #2B378D
 
-    .swiper-button-next
-        right: 0
+    &::after
+        font-family: "swiper-icons"
+        font-size: 20px
+        font-weight: bold
+        color: white
+
+.home-3-global-prev
+    @apply left-20
+    &::after
+        content: "prev"
+    &:hover::after
+        color: #2B378D
+
+.home-3-global-next
+    @apply right-20
+    &::after
+        content: "next"
+    &:hover::after
+        color: #2B378D
 
 // Ghi chú: Responsive cho kích thước card
 // Kích thước của slider được điều khiển trong swiper.js
@@ -70,4 +85,3 @@
     .card-item
         width: 90% 
         height: 500px
-        // Chiếm 90% chiều rộng slide trên mobile
