--- a/src/components/global/_fix.sass
+++ b/src/components/global/_fix.sass
@@ -7,10 +7,11 @@
             top: 0
             left: 50%
             transform: translateX(-50%)
-            width: 2px
+            width: 1px
             height: 100%
             background-color: #fff
             z-index: -1
+            transition: all .3s ease
     li
         margin: 20px 0
     a.dot
@@ -21,10 +22,13 @@
         background-color: #fff
         text-indent: -9999px
         position: relative
-        &:hover, &.active
+        transition: all .3s ease
+        &:hover
             background-color: #41924F
+        &.active
+            background-color: #41924F
+            transform: scale(1.2)
         &::after
-            content: attr(href)
             position: absolute
             left: -120px
             top: 50%
@@ -37,3 +41,18 @@
             opacity: 0
             visibility: hidden
             transition: all .3s ease
+    &:hover
+        a.dot
+            &::after
+                opacity: 1
+                visibility: visible
+    &.green
+        ul
+            &::before
+                background-color: #41924F
+        a.dot
+            background-color: #41924F
+            &.active
+                background-color: #41924F
+            &:hover
+                background-color: #fff
