--- a/src/components/modules/home/home-5/home-5.pug
+++ b/src/components/modules/home/home-5/home-5.pug
@@ -2,7 +2,7 @@ section.home-5(setBackground="./img/section5.png")(id="home-5")
     .container(class="flex flex-col justify-center h-full")
         div(class="w-full flex justify-between items-center")
             h1(class="text-[#41924F] uppercase xl:rem:text-[48px] md:text-[32px] -sm:text-[24px] font-bold  ") Tin tức mới nhất
-            button(class="rem:w-[146px] rem:h-[48px] bg-blue-600 border-4 border-solid border-gray-500 text-white ") Xem thêm <i class="fa-solid fa-angle-right"></i>
+            +BtnPrimary()
         div(class="col-gird")
             .col-item-left
                 .img-container
@@ -10,6 +10,7 @@ section.home-5(setBackground="./img/section5.png")(id="home-5")
                         img(src="./img/1.jpg", alt="")
                 .date
                     p 10/10/2025
+                    span.dot 
                     p Tin công ty
                 h1 PVC-MS stands in Top 1,000 Enterprises pay corporate income tax in Vietnam for 5 consecutive years
                 p Sản phẩm truyền thống của PVC-MS là thi công các kết cấu giàn khoan, bồn bể, đường ống công nghệ
@@ -21,6 +22,7 @@ section.home-5(setBackground="./img/section5.png")(id="home-5")
                     .col-body 
                         .date
                             p 10/10/2025
+                            span.dot 
                             p Tin công ty
                         h1 PVC-MS stands in Top 1,000 Enterprises pay corporate 
                         p PVC-MS stands in Top 1,000 Enterprises pay corporate income tax in Vietnam for 5 consecutive years
@@ -31,6 +33,7 @@ section.home-5(setBackground="./img/section5.png")(id="home-5")
                     .col-body 
                         .date
                             p 10/10/2025
+                            span.dot 
                             p Tin công ty
                         h1 PVC-MS stands in Top 1,000 Enterprises pay corporate 
                         p PVC-MS stands in Top 1,000 Enterprises pay corporate income tax in Vietnam for 5 consecutive years
@@ -41,6 +44,7 @@ section.home-5(setBackground="./img/section5.png")(id="home-5")
                     .col-body 
                         .date
                             p 10/10/2025
+                            span.dot 
                             p Tin công ty
                         h1 PVC-MS stands in Top 1,000 Enterprises pay corporate 
                         p PVC-MS stands in Top 1,000 Enterprises pay corporate income tax in Vietnam for 5 consecutive years
